--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,4 +11,8 @@
         android:icon="@drawable/ic_nav_map"
         android:title="@string/navigation_map" />
 
+    <item
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/ic_nav_search"
+        android:title="@string/navigation_search" />
 </menu>
