--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,12 @@
             android:imeOptions="actionDone"
             android:hint="@string/search_hint"/>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/search_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"/>
+
     </LinearLayout>
 
     <android.support.design.widget.BottomNavigationView
