Store previous data in tabs, add map downtime information. Last commit is also from here

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="trolleydark">#2A76CC</color>
     <color name="trolleylight">#2F84E3</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey">#88857E</color>
     <color name="light_grey">#DFDFDC</color>
