--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,10 @@
         android:id="@+id/search_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/input_search"
+        android:textColorHint="@color/light_grey"
+        android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/cursor_search"
         android:inputType="text"
         android:imeOptions="actionDone"
         android:visibility="gone"
@@ -30,21 +34,34 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/mapholder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/maperror"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:paddingVertical="5sp"
+            android:text="@string/error"/>
 
         <fragment
             xmlns:map="http://schemas.android.com/apk/res-auto"
             android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:name="com.google.android.gms.maps.SupportMapFragment" />
 
-    </FrameLayout>
+    </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
