--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -55,6 +55,7 @@
         android:paddingTop="5sp"
         android:paddingBottom="5sp"
         android:paddingLeft="15sp"
+        android:paddingRight="15sp"
         android:background="@color/light_grey">
 
         <TextView
@@ -63,6 +64,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="24sp"
+            android:gravity="center"/>
+
+        <View
+            android:layout_width="0sp"
+            android:layout_height="12sp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/stop_status"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:textSize="16sp"
             android:gravity="center"/>
     </LinearLayout>
 
