--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -36,7 +36,8 @@
             android:paddingRight="15sp"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:text="1"/>
+            android:text="1"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/down_text"
@@ -70,7 +71,8 @@
             android:textColor="@color/white"
             android:paddingRight="15sp"
             android:textSize="20sp"
-            android:text="2"/>
+            android:text="2"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/perm_text"
