--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -6,6 +6,6 @@
     <item
         android:id="@+id/toolbar_settings"
         android:icon="@drawable/ic_settings"
-        android:title="@string/toolbar_settings"
+        android:title="@string/settings"
         app:showAsAction="ifRoom"/>
 </menu>
