--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
+    android:padding="@dimen/matgin"
     app:titleTextColor="@color/white"
-    android:elevation="4dp"/>
+    android:elevation="4dp">
+
+        <com.psanja.tallinntransport.Utils.Tst
+            android:id="@+id/main_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/input_search_2"
+            android:textColor="@color/black"
+            android:textCursorDrawable="@drawable/cursor_search_2"
+            android:inputType="text"
+            android:gravity="center"
+            android:imeOptions="actionSearch" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/main_search_button"
+            android:layout_gravity="right|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/ic_settings"/>
+
+</FrameLayout>
